tests/invalid/mode_error_arg_number.err_exp
mode_error_arg_number.m:034: In clause for
mode_error_arg_number.m:034:   `split_into_fragments((pred(in((list.non_empty_list)),
mode_error_arg_number.m:034:   out((list.non_empty_list)), out) is det),
mode_error_arg_number.m:034:   in((list.non_empty_list)), in,
mode_error_arg_number.m:034:   out((list.non_empty_list)))':
mode_error_arg_number.m:034:   mode error: argument 4 did not get sufficiently
mode_error_arg_number.m:034:   instantiated.
mode_error_arg_number.m:034:   Final instantiatedness of `Frags' was `ground',
mode_error_arg_number.m:034:   expected final instantiatedness was
mode_error_arg_number.m:034:     named inst list.non_empty_list
mode_error_arg_number.m:034:     which expands to
mode_error_arg_number.m:034:       bound(
mode_error_arg_number.m:034:         '[|]'(ground, ground)
mode_error_arg_number.m:034:       ).
